syntax = "proto3";

package io.stellarproject.types.v1;

import weak "gogoproto/gogo.proto";

option go_package = "github.com/stellarproject/terraos/api/types/v1;v1";

message Target {
	string iqn = 1;
	int64 id = 2 [(gogoproto.customname) = "ID"];
	repeated LUN luns = 3;
	repeated string accepts = 4;
}

message LUN {
	string id = 1 [(gogoproto.customname) = "ID"];
	string path = 2;
	int64 fs_size = 3;
	string label = 4;
}

message ISCSIState {
	repeated Target targets = 1;
	map<string, LUN> unallocated_luns = 2;
}
